--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<body>
 		<h1>Clarthen's Website</h1>
 		<p>Welcome to Clarthen's Website!</p>
+
+		<p><a href="symbol_picker.html">Symbol Picker</a></p>
 	</body>
 </html>
