--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		<p>Welcome to Clarthen's Website!</p>
 
 		<p><a href="symbol_picker.html">Symbol Picker</a></p>
+		<p><a href="node_connector.html">Node Connector</a></p>
 	</body>
 </html>
